--- a/index.html
+++ b/index.html
@@ -1,12 +1,76 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./vendor/fonts/fonts.css">
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <title>Путешествия по России</title>
+</head>
+
+<body>
+  <div class="page">
+    <div class="page__container">
+      <header class="header page__header">
+        <a href="./index.html" class="header__logo"><img src="./images/header-logo.svg" alt="Логотип сайта"
+            class="header__img"></a>
+        <ul class="header__lang">
+          <li class="header__lang-item"><a href="" class="header__lang-link header__lang-link_active">Ru</a></li>
+          <li class="header__lang-item"><a href="" class="header__lang-link">En</a></li>
+        </ul>
+      </header>
+      <main class="main">
+        <section class="lead page__lead">
+          <h1 class="lead__title">Путешествия по России</h1>
+          <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+          <img src="./images/lead-polka.jpg" alt="Маршрут посещенных городов России" class="lead__image">
+          <p class="lead__caption">Ваша полка — верхняя</p>
+        </section>
+        <section class="intro">
+          <div class="page__intro-text">
+            <h2 class="intro__title">Чего мы там не видели?</h2>
+            <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+              провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+              вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
+              эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+              Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала
+              20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
+              отпуска.</p>
+            <ul class="intro__list">
+              <li class="intro__item">Часовых поясов <span class="intro__item-number">11</span></li>
+              <li class="intro__item">Объектов природного наследия ЮНЕСКО <span class="intro__item-number">12</span>
+              </li>
+              <li class="intro__item">Объектов культурного наследия ЮНЕСКО <span class="intro__item-number">16</span>
+              </li>
+              <li class="intro__item">Природных заповедников <span class="intro__item-number">105</span></li>
+              <li class="intro__item"> Аэропортов <span class="intro__item-number">241</span></li>
+            </ul>
+          </div>
+          <ul class="photo-grid page__photo-grid">
+            <li class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt="" class="photo-grid__img"></li>
+            <li class="photo-grid__item"><img src="./images/photo-grid-atharva-tulsi.jpg" alt=""
+                class="photo-grid__img"></li>
+            <li class="photo-grid__item"><img src="./images/photo-grid-tuman.jpg" alt="" class="photo-grid__img"></li>
+            <li class="photo-grid__item"><img src="./images/photo-grid-sochi.jpg" alt="" class="photo-grid__img"></li>
+            <li class="photo-grid__item"><img src="./images/photo-grid-arisa.jpg" alt="" class="photo-grid__img"></li>
+            <li class="photo-grid__item"><img src="./images/photo-grid-baikal.jpg" alt="" class="photo-grid__img"></li>
+            <li class="photo-grid__item"><img src="./images/photo-grid-elbrus.jpg" alt="" class="photo-grid__img"></li>
+            <li class="photo-grid__item"><img src="./images/photo-grid-kondratiev.jpg" alt="" class="photo-grid__img">
+            </li>
+            <li class="photo-grid__item"><img src="./images/photo-grid-kamchatka-1.jpg" alt="" class="photo-grid__img">
+            </li>
+            <li class="photo-grid__item"><img src="./images/photo-grid-kamchatka-2.jpg" alt="" class="photo-grid__img">
+            </li>
+            <li class="photo-grid__item"><img src="./images/photo-grid-baikal-2.jpg" alt="" class="photo-grid__img">
+            </li>
+            <li class="photo-grid__item"><img src="./images/photo-grid-ergaki.jpg" alt="" class="photo-grid__img"></li>
+          </ul>
+        </section>
+      </main>
+    </div>
+  </div>
 </body>
+
 </html>
