--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
             <h3 class="place__title">Кольский</h3>
             <div class="place__website">
               <p class="place__url-heading">Url</p>
-              <a href="http://park-kosa.ru" class="place__link" title="Куршская коса">National Geographic</a>
+              <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link"
+                title="National Geographic - Кольский">National
+                Geographic</a>
             </div>
             <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
             <div class="place__text">
@@ -111,7 +113,8 @@
             <h3 class="place__title">Алтай</h3>
             <div class="place__website">
               <p class="place__url-heading">Url</p>
-              <a href="http://park-kosa.ru" class="place__link" title="Куршская коса">Facebook</a>
+              <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link"
+                title="Вера Башмакова - Алтай">Facebook</a>
             </div>
             <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
             <div class="place__text">
@@ -129,7 +132,8 @@
             <h3 class="place__title">Зимний Байкал</h3>
             <div class="place__website">
               <p class="place__url-heading">Url</p>
-              <a href="http://park-kosa.ru" class="place__link" title="Куршская коса">https://vk.com/baikalmile</a>
+              <a href="https://vk.com/baikalmile" class="place__link"
+                title="Зимний Байкал">https://vk.com/baikalmile</a>
             </div>
             <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
             <div class="place__text">
@@ -147,7 +151,7 @@
             <h3 class="place__title">Карелия</h3>
             <div class="place__website">
               <p class="place__url-heading">Url</p>
-              <a href="http://park-kosa.ru" class="place__link" title="Куршская коса">http://vodlozero.ru/</a>
+              <a href="http://vodlozero.ru" class="place__link" title="Карелия">http://vodlozero.ru/</a>
             </div>
             <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
             <div class="place__text">
@@ -165,16 +169,27 @@
       </section>
 
       <section class="cover page__cover">
-        <div class="cover__text">
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
-          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-            электричках.</p>
-        </div>
+
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__title">До Байкала «на собаках»</a>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+          электричках.</p>
         <div class="cover__overlay">
           <img src="./images/cover-trains.jpg" alt="До Байкала на собаках" class="cover__background"></div>
 
       </section>
     </main>
+    <footer class="footer page__footer">
+      <nav class="footer__nav">
+        <ul class="footer__list">
+          <li class="footer__item"><a href="https://yandex.ru/maps" class="footer__link">Карты</a></li>
+          <li class="footer__item"><a href="https://yandex.ru/pogoda" class="footer__link">Погода</a></li>
+          <li class="footer__item"><a href="https://rasp.yandex.ru" class="footer__link">Расписание</a></li>
+          <li class="footer__item"><a href="https://calendar.yandex.ru" class="footer__link">Календарь</a></li>
+          <li class="footer__item"><a href="https://travel.yandex.ru" class="footer__link">Путешествия</a></li>
+        </ul>
+      </nav>
+      <p class="footer__copyright">&copy; 2021. Сергей Густерёв</p>
+    </footer>
   </div>
   <!-- </div> -->
 </body>
