--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/style.css">
-  <link rel="stylesheet" href="./vendor/fonts/fonts.css">
-  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Путешествия по России</title>
 </head>
 
 <body class="page">
-  <!-- <div class="page"> -->
   <div class="page__container">
     <header class="header page__header">
       <a href="./index.html" class="header__logo"><img src="./images/header-logo.svg" alt="Логотип сайта"
@@ -63,14 +60,12 @@
           </li>
           <li class="photo-grid__item"><img src="./images/photo-grid-kamchatka-2.jpg" alt="" class="photo-grid__img">
           </li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-baikal-2.jpg" alt="" class="photo-grid__img">
-          </li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-baikal-2.jpg" alt="" class="photo-grid__img"></li>
           <li class="photo-grid__item"><img src="./images/photo-grid-ergaki.jpg" alt="" class="photo-grid__img"></li>
         </ul>
       </section>
       <section class="places page__places">
         <ul class="places__list">
-
           <li class="place places__item">
             <h3 class="place__title">Куршская коса</h3>
             <div class="place__website">
@@ -88,7 +83,6 @@
                 спокойствие природы и запах стального, прохладного моря.</p>
             </div>
           </li>
-
           <li class="place places__item">
             <h3 class="place__title">Кольский</h3>
             <div class="place__website">
@@ -108,7 +102,6 @@
                 в Мурманск.</p>
             </div>
           </li>
-
           <li class="place places__item">
             <h3 class="place__title">Алтай</h3>
             <div class="place__website">
@@ -127,7 +120,6 @@
                 на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.</p>
             </div>
           </li>
-
           <li class="place places__item">
             <h3 class="place__title">Зимний Байкал</h3>
             <div class="place__website">
@@ -146,7 +138,6 @@
                 фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
             </div>
           </li>
-
           <li class="place places__item">
             <h3 class="place__title">Карелия</h3>
             <div class="place__website">
@@ -163,20 +154,15 @@
                 в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
             </div>
           </li>
-
         </ul>
-
       </section>
-
-      <section class="cover page__cover">
-
+      <div class="cover page__cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__title">До Байкала «на собаках»</a>
         <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
           электричках.</p>
         <div class="cover__overlay">
           <img src="./images/cover-trains.jpg" alt="До Байкала на собаках" class="cover__background"></div>
-
-      </section>
+      </div>
     </main>
     <footer class="footer page__footer">
       <nav class="footer__nav">
@@ -191,7 +177,6 @@
       <p class="footer__copyright">&copy; 2021. Сергей Густерёв</p>
     </footer>
   </div>
-  <!-- </div> -->
 </body>
 
 </html>
