--- a/index.html
+++ b/index.html
@@ -68,11 +68,14 @@
         <ul class="places__list">
           <li class="place places__item">
             <h3 class="place__title">Куршская коса</h3>
+
             <div class="place__website">
               <p class="place__url-heading">Url</p>
               <a href="http://park-kosa.ru" class="place__link" title="Куршская коса">park-kosa.ru</a>
             </div>
-            <img src="./images/place-kosa.jpg" alt="Куршская коса" class="place__image">
+            <div class="place__image-container"><img src="./images/place-kosa.jpg" alt="Куршская коса"
+                class="place__image"></div>
+
             <div class="place__text">
               <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
                 — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой.
@@ -82,6 +85,8 @@
                 наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в
                 спокойствие природы и запах стального, прохладного моря.</p>
             </div>
+
+
           </li>
           <li class="place places__item">
             <h3 class="place__title">Кольский</h3>
@@ -91,7 +96,9 @@
                 title="National Geographic - Кольский">National
                 Geographic</a>
             </div>
-            <img src="./images/place-kolsky.jpg" alt="Кольский" class="place__image">
+            <div class="place__image-container"> <img src="./images/place-kolsky.jpg" alt="Кольский"
+                class="place__image"></div>
+
             <div class="place__text">
               <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от
                 которой на юг — тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -109,7 +116,10 @@
               <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link"
                 title="Вера Башмакова - Алтай">Facebook</a>
             </div>
-            <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
+            <div class="place__image-container">
+              <img src="./images/place-altai.jpg" alt="Алтай" class="place__image">
+            </div>
+
             <div class="place__text">
               <p class="place__paragraph">Алтай — одно из красивейших мест в России.
                 В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
@@ -127,7 +137,9 @@
               <a href="https://vk.com/baikalmile" class="place__link"
                 title="Зимний Байкал">https://vk.com/baikalmile</a>
             </div>
-            <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
+            <div class="place__image-container">
+              <img src="./images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image"></div>
+
             <div class="place__text">
               <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро
                 в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в
@@ -144,7 +156,10 @@
               <p class="place__url-heading">Url</p>
               <a href="http://vodlozero.ru" class="place__link" title="Карелия">http://vodlozero.ru/</a>
             </div>
-            <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
+            <div class="place__image-container">
+              <img src="./images/place-karelia.jpg" alt="Карелия" class="place__image">
+            </div>
+
             <div class="place__text">
               <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
                 лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
