--- a/index.html
+++ b/index.html
@@ -25,27 +25,29 @@
         <img src="./images/lead-polka.jpg" alt="Маршрут посещенных городов России" class="lead__image">
         <p class="lead__caption">Ваша полка — верхняя</p>
       </section>
-      <section class="intro">
-        <div class="page__intro-text">
-          <h2 class="intro__title">Чего мы там не видели?</h2>
-          <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
-            провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
-            вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
-            эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
-            Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала
-            20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
-            отпуска.</p>
-          <ul class="intro__list">
-            <li class="intro__item">Часовых поясов <span class="intro__item-number">11</span></li>
-            <li class="intro__item">Объектов природного наследия ЮНЕСКО <span class="intro__item-number">12</span>
-            </li>
-            <li class="intro__item">Объектов культурного наследия ЮНЕСКО <span class="intro__item-number">16</span>
-            </li>
-            <li class="intro__item">Природных заповедников <span class="intro__item-number">105</span></li>
-            <li class="intro__item"> Аэропортов <span class="intro__item-number">241</span></li>
-          </ul>
-        </div>
-        <ul class="photo-grid page__photo-grid">
+      <section class="intro page__intro">
+        <!-- <div class="page__intro-text"> -->
+        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
+          провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
+          вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все
+          эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера
+          Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала
+          20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего
+          отпуска.</p>
+        <ul class="intro__list">
+          <li class="intro__item">Часовых поясов <span class="intro__item-number">11</span></li>
+          <li class="intro__item">Объектов природного наследия ЮНЕСКО <span class="intro__item-number">12</span>
+          </li>
+          <li class="intro__item">Объектов культурного наследия ЮНЕСКО <span class="intro__item-number">16</span>
+          </li>
+          <li class="intro__item">Природных заповедников <span class="intro__item-number">105</span></li>
+          <li class="intro__item"> Аэропортов <span class="intro__item-number">241</span></li>
+        </ul>
+      </section>
+      <!-- </div> -->
+      <section class="photo-gallery">
+        <ul class="photo-grid photo-gallery__list">
           <li class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt="" class="photo-grid__img"></li>
           <li class="photo-grid__item"><img src="./images/photo-grid-atharva-tulsi.jpg" alt="" class="photo-grid__img">
           </li>
@@ -156,13 +158,13 @@
           </li>
         </ul>
       </section>
-      <div class="cover page__cover">
-        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__title">До Байкала «на собаках»</a>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-          электричках.</p>
-        <div class="cover__overlay">
-          <img src="./images/cover-trains.jpg" alt="До Байкала на собаках" class="cover__background"></div>
-      </div>
+      <section class="cover page__cover">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
+          <h3 class="cover__title">До Байкала «на собаках»</h3>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+            электричках.</p>
+        </a>
+      </section>
     </main>
     <footer class="footer page__footer">
       <nav class="footer__nav">
