доработка после ревью

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         <p class="lead__caption">Ваша полка — верхняя</p>
       </section>
       <section class="intro page__intro">
-        <!-- <div class="page__intro-text"> -->
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
           провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
@@ -45,25 +44,24 @@
           <li class="intro__item"> Аэропортов <span class="intro__item-number">241</span></li>
         </ul>
       </section>
-      <!-- </div> -->
       <section class="photo-gallery">
         <ul class="photo-grid photo-gallery__list">
-          <li class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt="" class="photo-grid__img"></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-atharva-tulsi.jpg" alt="" class="photo-grid__img">
+          <li class="photo-grid__item"><img src="./images/photo-grid-train.jpg" alt="Вид из окна поезда" class="photo-grid__img"></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-atharva-tulsi.jpg" alt="Заснеженные горы" class="photo-grid__img">
           </li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-tuman.jpg" alt="" class="photo-grid__img"></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-sochi.jpg" alt="" class="photo-grid__img"></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-arisa.jpg" alt="" class="photo-grid__img"></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-baikal.jpg" alt="" class="photo-grid__img"></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-elbrus.jpg" alt="" class="photo-grid__img"></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-kondratiev.jpg" alt="" class="photo-grid__img">
+          <li class="photo-grid__item"><img src="./images/photo-grid-tuman.jpg" alt="Собака наблюдает за происходящим стоя на стогу сена" class="photo-grid__img"></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-sochi.jpg" alt="Лес окутал туман" class="photo-grid__img"></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-arisa.jpg" alt="Автомобиль на льду" class="photo-grid__img"></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-baikal.jpg" alt="Берег озера Байкал" class="photo-grid__img"></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-elbrus.jpg" alt="Вершина Эльбруса" class="photo-grid__img"></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-kondratiev.jpg" alt="Знак пешеходного перехода" class="photo-grid__img">
           </li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-kamchatka-1.jpg" alt="" class="photo-grid__img">
+          <li class="photo-grid__item"><img src="./images/photo-grid-kamchatka-1.jpg" alt="Горы Камчатки" class="photo-grid__img">
           </li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-kamchatka-2.jpg" alt="" class="photo-grid__img">
+          <li class="photo-grid__item"><img src="./images/photo-grid-kamchatka-2.jpg" alt="Красивые горы Камчатки" class="photo-grid__img">
           </li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-baikal-2.jpg" alt="" class="photo-grid__img"></li>
-          <li class="photo-grid__item"><img src="./images/photo-grid-ergaki.jpg" alt="" class="photo-grid__img"></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-baikal-2.jpg" alt="Скалистый берег Байкала" class="photo-grid__img"></li>
+          <li class="photo-grid__item"><img src="./images/photo-grid-ergaki.jpg" alt="Горы в тумане" class="photo-grid__img"></li>
         </ul>
       </section>
       <section class="places page__places">
@@ -160,7 +158,7 @@
       </section>
       <section class="cover page__cover">
         <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__link">
-          <h3 class="cover__title">До Байкала «на собаках»</h3>
+          <h2 class="cover__title">До Байкала «на собаках»</h2>
           <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
             электричках.</p>
         </a>
